@@ -666,6 +666,7 @@ test_player_ft2_k00_is_note_off
 test_player_ft2_kxx
 test_player_ft2_no_note_ins_envelope
 test_player_ft2_note_invalid_subins
+test_player_ft2_note_no_fadeout_reset
 test_player_ft2_note_noins_after_keyoff
 test_player_ft2_note_noins_after_invalid_ins
 test_player_ft2_note_off_after_invalid_ins
